--- a/focus94/index.html
+++ b/focus94/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<div class="header"><img src="images/loge1.jpg"></div>
+<div class="header"><img src="loge1.jpg"></div>
 <ul class="hua">
 	<li><a href="" onclick="big()">Introduce</a></li>
 	<li><a href="">Theme</a></li>
