--- a/focus94/index.html
+++ b/focus94/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+<div class="header"><img src=""></div>
 <ul class="hua">
 	<li><a href="" onclick="big()">Introduce</a></li>
 	<li><a href="">Theme</a></li>
