--- a/focus94/index.html
+++ b/focus94/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<div class="header"> <img src="loge2.jpg"></div>
+<div class="header">welcome after tea</div>
 <ul class="hua">
 	<li><a href="" onclick="big()">Introduce</a></li>
 	<li><a href="">Theme</a></li>
